prestashop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prestashop-service-nodeport
spec:
  type: NodePort
  selector:
    app: prestashop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
