wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service-nodeport
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
