ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  labels:
    app: ingress-app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: bs-bc3-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: 301, 302
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/actions.rule-internal1: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"wordpress-service-nodeport","servicePort":"80"}]}}
    alb.ingress.kubernetes.io/conditions.rule-internal1: >
      [{"field":"source-ip","sourceIpConfig":{"values":["195.117.107.110/32"]}}]
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rule-internal1
                port: 
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prestashop-service-nodeport
                port: 
                  number: 80
